feat(test): Add comprehensive unit tests for service implementations
- Create detailed unit tests for SubjectServiceImpl, TeacherServiceImpl, SchoolServiceImpl, and CourseServiceImpl
- Implement test coverage for all lifecycle methods (create, read, update, delete, activate/deactivate)
- Mock all service dependencies using Mockito to ensure proper isolation
- Use consistent test structure with arrange-act-assert pattern and descriptive DisplayName annotations
- Test both success paths and error conditions for all service methods
- Verify proper interaction with repositories and mappers
- Ensure all tests run in isolation without external dependencies

These tests provide complete coverage of the service layer, helping to prevent regressions and validate business logic functionality. Each test class follows the same structure and naming conventions for consistency and maintainability.